--- a/Capitu.MVC/Views/Fornecedor/View1.cshtml
+++ b/Capitu.MVC/Views/Fornecedor/View1.cshtml
@@ -153,7 +153,9 @@ Sou uma acompanhante morena estilo mulherão, tenho seios fartos e uma boca sens
 		</table>
 	</div>
 	<div class="boxBtnChamarPraSair">
-		<input type="button" class="btnDefault" value="Convidar Ana Bella pra sair" />
+		<input type="tel" class="btnDefault" value="11 97145-1234" />
+        
+        @*@Html.DisplayFor(model => model.Telefone, new { @class = "btnDefault", type="button"})*@
 	</div>
 </div>
 </body>
