--- a/Capitu.MVC/Views/Shared/_LayoutMobile.cshtml
+++ b/Capitu.MVC/Views/Shared/_LayoutMobile.cshtml
@@ -12,8 +12,10 @@
         <div data-role="page" data-theme="b">
             <div data-role="header">                
                 <span id="pagEsquerda">
-                    <img src="~/Images/logoCapitu.png" />                                                
+                    @*<img src="~/Images/logoCapitu.png" />*@                                                                    
+                        <img src="~/Images/logoCapitu.png" />                                        
                 </span>
+                <p>O <span>prazer</span> mora ao lado!</p>
             </div>
             <div data-role="content">
                 @RenderBody()
